ajustes na modelagem de permissoes